added pptx and updated ipynb

--- a/Naan_Mudhalvan_Project.ipynb
+++ b/Naan_Mudhalvan_Project.ipynb
@@ -16,32 +16,19 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "lEBMVUwNpfPm"
       },
       "outputs": [],
       "source": [
-        "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-        "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-        "# For example, here's several helpful packages to load\n",
-        "\n",
-        "import numpy as np # linear algebra\n",
-        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-        "\n",
-        "# Input data files are available in the read-only \"../input/\" directory\n",
-        "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "import os\n",
-        "#for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-        "#    for filename in filenames:\n",
-        "#        print(os.path.join(dirname, filename))\n",
         "\n",
         "import os\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "\n",
-        "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\"\n",
-        "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
       ]
     },
     {
@@ -57,7 +44,7 @@
         "id": "16HBZT1MG5w5",
         "outputId": "d6a809fe-e62e-478e-f5d5-ceac29277fb2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +68,7 @@
       "metadata": {
         "id": "sKbBe7NSxqkJ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +78,6 @@
         "train_dir = os.path.join(base_dir, 'data')\n",
         "validation_dir = os.path.join(base_dir, 'data')\n",
         "\n",
-        "# Normaliza los valores de píxeles de 0-255 a 0-1 y aplica aumento de datos si es necesario\n",
         "train_datagen = ImageDataGenerator(rescale=1./255)\n",
         "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n"
@@ -99,20 +85,18 @@
       "metadata": {
         "id": "Te_VJN6oyKA6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Flow training images in batches using train_datagen generator\n",
         "train_generator = train_datagen.flow_from_directory(\n",
         "    train_dir,\n",
         "    target_size=(150, 150),\n",
         "    batch_size=32,\n",
         "    class_mode='categorical')\n",
         "\n",
-        "# Flow validation images in batches using validation_datagen generator\n",
         "validation_generator = validation_datagen.flow_from_directory(\n",
         "    validation_dir,\n",
         "    target_size=(150, 150),\n",
@@ -126,7 +110,7 @@
         "id": "AV3nVgfA2o8X",
         "outputId": "a1a2ffea-808a-4d26-b59e-85d68cfc4b7f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +132,7 @@
       "metadata": {
         "id": "0DToO3OyH9qh"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,13 +150,13 @@
         "    Flatten(),\n",
         "    Dropout(0.5),\n",
         "    Dense(512, activation='relu'),\n",
-        "    Dense(4, activation='softmax')  # Update number of units to match the number of classes\n",
+        "    Dense(4, activation='softmax')\n",
         "])\n"
       ],
       "metadata": {
         "id": "5-xJEZPJIIGN"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +181,7 @@
         "id": "XsQOFOZjINDa",
         "outputId": "b88cfb3c-5553-433e-b62e-cff7fec2a4ee"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +288,7 @@
         "id": "FJm1Jev5QJ3A",
         "outputId": "edf13715-abad-4e53-cc07-ebe5b7a8ec61"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,11 +333,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Evaluar el modelo en los datos de validación\n",
+        "\n",
         "eval_result = model.evaluate(validation_generator)\n",
-        "print(\"\\n\\nTest Loss:\", eval_result[0], \"Test Accuracy:\", eval_result[1])\n",
-        "#8/8 [==============================] - 2s 204ms/step - loss: 2.0377 - accuracy: 0.6758\n",
-        "#Test Loss: 2.0376954078674316 Test Accuracy: 0.67578125"
+        "print(\"\\n\\nTest Loss:\", eval_result[0], \"Test Accuracy:\", eval_result[1])\n"
       ],
       "metadata": {
         "colab": {
@@ -362,7 +344,7 @@
         "id": "T_-yglHkS56h",
         "outputId": "97a09c71-5c25-4ebc-d8e8-2005c17f9c6c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,26 +365,22 @@
         "import matplotlib.pyplot as plt\n",
         "from tensorflow.keras.preprocessing import image\n",
         "\n",
-        "# Function to predict individual images\n",
         "def predict_image(img_path, model):\n",
         "    img = image.load_img(img_path, target_size=(150, 150))\n",
         "    img_array = image.img_to_array(img)\n",
-        "    img_array = np.expand_dims(img_array, axis=0)  # Add the batch dimension\n",
-        "    img_array /= 255.0  # Normalize the image\n",
+        "    img_array = np.expand_dims(img_array, axis=0)\n",
+        "    img_array /= 255.0\n",
         "\n",
         "    prediction = model.predict(img_array)\n",
         "\n",
-        "    # Define class labels\n",
+        "\n",
         "    labels = [\"angry\", \"happy\", \"sad\"]\n",
         "\n",
-        "    # Get the index of the class with the highest probability\n",
         "    predicted_class_index = np.argmax(prediction)\n",
         "\n",
-        "    # Print the predicted class index and the entire prediction array\n",
         "    print(\"Predicted class index:\", predicted_class_index)\n",
         "    print(\"Prediction array:\", prediction)\n",
         "\n",
-        "    # Print the predicted class if the index is within range\n",
         "    if predicted_class_index-1 < len(labels):\n",
         "        print(f\"The detected emotion is: {labels[predicted_class_index-1]}\")\n",
         "    else:\n",
@@ -411,8 +389,6 @@
         "    plt.imshow(img)\n",
         "    plt.show()\n",
         "\n",
-        "# Example usage of the function\n",
-        "# Replace 'some_image_path.jpg' with the path to a validation image\n",
         "predict_image('/content/drive/MyDrive/human-face-emotions/data/Angry/1564075.jpg', model)\n",
         "predict_image('/content/drive/MyDrive/human-face-emotions/data/Happy/613k1XcpYCL.jpg', model)\n",
         "predict_image('/content/drive/MyDrive/human-face-emotions/data/Sad/sadness.jpg', model)\n"
@@ -425,7 +401,7 @@
         "id": "K6gcIZtWTTL_",
         "outputId": "86a43488-acd6-4490-8a67-f86dfa3956cb"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +483,6 @@
         "        predictions.append(np.argmax(prediction))\n",
         "    return predictions\n",
         "\n",
-        "# Define the true labels and paths to the test images\n",
         "true_labels = [2,2,1,1,1,1,1,0,0,0]  # Assuming 0: \"angry\", 1: \"happy\", 2: \"sad\"\n",
         "test_image_paths = ['/content/drive/MyDrive/human-face-emotions/data/Sad/sad.jpg',\n",
         "                    '/content/drive/MyDrive/human-face-emotions/data/Sad/sadness-inside-out-today-main-tease-191018.jpg',\n",
@@ -536,12 +511,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 651
+          "height": 646
         },
         "id": "Yuy8SgZvXDTa",
         "outputId": "d1e7dee5-7265-4458-aa61-8dfc4de7e55c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
